<resources>
    <string name="app_name">COVID-19 Response</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="choose_display_name">Choose Display Name</string>
    <string name="create_account_summary">Kindly provide the few details below and we will setup your account for you</string>
    <string name="location">Location</string>
    <string name="enter_nin">Enter NIN</string>
    <string name="choose_password">Choose Password</string>
    <string name="hint_location">e.g Lagos</string>
    <string name="hint_password">********</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_hint">e.g name@example.com</string>
    <string name="name_hint">e.g Samson Achiaga</string>
    <string name="login_summary">Welcome back, provide your details to login to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="status_check">Status Check</string>
    <string name="me">Me</string>
    <string name="bottom_navigation_view">Bottom Navigation View</string>
    <string name="and">and</string>
    <string name="read_about_our">Read about our</string>
    <string name="password_requirement">Password must be at least 8 characters\nand have at least a:\n Uppercase letter e.g A\n Special character e.g @\n Number e.g 1</string>

    <string-array name="locations">
        <item>Lagos</item>
        <item>Abuja</item>
        <item>Ondo</item>
        <item>Benue</item>
        <item>Ogun</item>
        <item>Anambra</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">OR</string>
    <string name="hint_nin">e.g 00012130101010</string>
    <string name="explore_feed">Explore Feed</string>
    <string name="latest_news">Latest News</string>
    <string name="all"><u>All</u></string>
    <string name="trending">Trending</string>
    <string name="new_release">New release</string>
    <string name="related_topics">Related topics:</string>
    <string name="latest_articles">Latest Articles</string>
    <string name="article_by">Article by</string>
    <string name="read_more">Read more</string>
    <string name="coming_soon">Coming soon</string>
    <string name="covid_status_check">Covid Status check</string>
    <string name="choose_symptoms">Choose symptoms</string>
    <string name="choose_symptoms_description">Choose the symptoms that best describes how you are feeling.</string>
    <string name="confusion">Confusion</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="sore_throat">Sore throat</string>
    <string name="fever">Fever</string>
    <string name="fatigue">Fatigue</string>
    <string name="dry_cough">Dry cough</string>
    <string name="shortness_breath">Shortness of breath</string>
    <string name="chills_dizziness">Chills or Dizziness</string>
    <string name="loss_appetite">Loss of appetite</string>
    <string name="conjunctivitis">Conjunctivitis</string>
    <string name="nasal_congestion">Nasal congestion</string>
    <string name="headache">Headache</string>
    <string name="persistent_pain_or_pressure_in_the_chest">Persistent pain or pressure in the chest</string>
    <string name="high_temp">High temperature (above 38 °C).</string>
    <string name="source">Source:</string>
    <string name="symptoms_link"><u>www.who.int/...</u></string>
    <string name="describe_how_you_are_feeling">Describe how you are feeling</string>
    <string name="describe_how_you_are_feeling_in_your_own_words_below">Describe how you are feeling in your own words below</string>
    <string name="type_here">Type here…</string>
    <string name="check_status">Check Status</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_nin">Edit NIN</string>
    <string name="add_bio">Add Bio</string>
    <string name="save_changes">Save Changes</string>
    <string name="last_name_hint">e.g Achiaga</string>
    <string name="last_name">Last name</string>
    <string name="first_name_hint">e.g Samson</string>
    <string name="first_name">First name</string>
    <string name="back_button">Back button</string>
    <string name="enter_bio">Enter Bio</string>
    <string name="hint_bio">e.g A little something about you</string>
    <string name="omicron">Omicron</string>
    <string name="variant">Variant</string>
    <string name="notifications_button">Notifications Button</string>
    <string name="show_all_news_button">Show all news button</string>
    <string name="show_all_articles_button">Show all articles button</string>
    <string name="who">WHO</string>
    <string name="covid_status_result">Covid Status Result</string>
    <string name="results">Results</string>
    <string name="result_summary">Based on your symptoms, here’s your covid status</string>
    <string name="covid19_isolation">Covid19 Isolation:</string>
    <string name="checking_status">Checking status</string>
    <string name="analyzing_symptoms">Analyzing symptoms</string>
    <string name="check_status_summary">Please bear with us, this analysis might take a few seconds,</string>
    <string name="cancel">Cancel</string>
    <string name="continue_text">Continue</string>
    <string name="message">Message</string>
    <string name="contact_any_of_these_doctors">Contact any of these doctors</string>
    <string name="notifications">Notifications</string>
    <string name="attachment_button">Attachment Button</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="protect_yourself">Protect yourself:</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="password_recovery_summary">Hi there, Kindly enter your email to reset your password</string>
    <string name="hint_sex">e.g Male</string>
    <string name="choose_sex">Choose Sex</string>
    <string name="hint_position">e.g Gynaecologist</string>
    <string name="enter_position">Enter Position</string>
    <string name="notification_subtitle">When there are new updates; news and articles, we\'ll post it here</string>
    <string name="notification_title">There\'s nothing new here.</string>
    <string name="feature_not_available">This feature is currently not available to doctors. Kindly check back later.</string>
    <string name="permission_required">This permission is required to enable audio recording</string>
    <string name="no_news_text">There are currently no new releases. We\'ll post them here when there are.</string>
</resources>