<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <data>

        <import type="androidx.databinding.ObservableField" />

        <import type="com.certified.covid19response.util.UIState" />

        <variable
            name="uiState"
            type="ObservableField&lt;UIState>" />

        <variable
            name="viewModel"
            type="com.certified.covid19response.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/space_grotesk_semi_bold"
            android:text="@string/explore_feed"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@null"
            android:contentDescription="@string/notifications_button"
            android:padding="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialTextView12"
            app:srcCompat="@drawable/ic_notification"
            tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView12">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:fontFamily="@font/space_grotesk_semi_bold"
                    android:text="@string/latest_news"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_show_all_news"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:contentDescription="@string/show_all_news_button"
                    android:fontFamily="@font/space_grotesk_semi_bold"
                    android:gravity="center_vertical|end"
                    android:text="@string/all"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/materialTextView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/materialTextView13"
                    tools:ignore="RedundantDescriptionCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/btn_show_all_news"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView13"
                    app:layout_constraintTop_toBottomOf="@+id/btn_show_all_news"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_news" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".7"
                    android:fontFamily="@font/space_grotesk_regular"
                    android:text="@string/related_topics"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/chipGroup"
                    app:layout_constraintStart_toStartOf="@+id/recycler_view_news"
                    app:layout_constraintTop_toTopOf="@+id/chipGroup" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_show_all_news"
                    app:layout_constraintStart_toEndOf="@+id/materialTextView16"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_news">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_omicron"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/space_grotesk_regular"
                        android:text="@string/omicron"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_variant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/space_grotesk_regular"
                        android:text="@string/variant"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_who"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/space_grotesk_regular"
                        android:text="@string/who"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/space_grotesk_semi_bold"
                    android:text="@string/latest_articles"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_show_all_articles"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/show_all_articles_button"
                    android:fontFamily="@font/space_grotesk_semi_bold"
                    android:gravity="center_vertical|end"
                    android:text="@string/all"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/materialTextView14"
                    app:layout_constraintEnd_toEndOf="@+id/recycler_view_news"
                    app:layout_constraintTop_toTopOf="@+id/materialTextView14"
                    tools:ignore="RedundantDescriptionCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_articles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_show_all_news"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView13"
                    app:layout_constraintTop_toBottomOf="@+id/btn_show_all_articles"
                    app:listNews="@{viewModel.latestNews}"
                    tools:listitem="@layout/item_articles" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visible="@{uiState == UIState.LOADING}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>