<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/_16sdp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16sdp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_line" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/space_grotesk_semi_bold"
        android:text="@string/checking_status"
        android:textColor="#000033"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/space_grotesk_regular"
        android:text="@string/check_status_summary"
        android:textColor="#6A6A6A"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView20" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:trackCornerRadius="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:indicatorColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView35" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/space_grotesk_regular"
        android:text="@string/analyzing_symptoms"
        android:textColor="#6A6A6A"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/linearProgressIndicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/space_grotesk_regular"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@+id/btn_continue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView36"
        app:strokeWidth=".5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        style="@style/Widget.Material3.Button"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:fontFamily="@font/space_grotesk_regular"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>